deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic
        image: registry.gitlab.com/renekevin/devops-petclinic
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: registry.gitlab.com
