acr-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-back
  template:
    metadata:
      labels:
        app: petclinic-back
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: petclinic-back
        image: redis
        ports:
        - containerPort: 6379
          name: redis
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-back
spec:
  ports:
  - port: 6379
  selector:
    app: petclinic-back
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-front
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: petclinic-front
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: petclinic-front
        image: renekevin.azurecr.io/petclinic:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-front
spec:
  type: LoadBalancer
  ports:
  - port: 8080
  selector:
    app: petclinic-front
